Change asset path to false

--- a/_includes/themes/CFA/report.html
+++ b/_includes/themes/CFA/report.html
@@ -184,6 +184,6 @@
       </div>
       
     <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
