--- a/_includes/themes/CFA/default.html
+++ b/_includes/themes/CFA/default.html
@@ -20,8 +20,6 @@
     <link rel="stylesheet" href="{{ ASSET_PATH }}/bootstrap/css/bootstrap-responsive.css">
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/cfa.css">
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/flat-ui.css">
-    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/font-awesome.css">
-    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/font-awesome-ie7.min.css">
     <!-- end: CSS -->
 
     <!-- start: browser tab icon -->
@@ -31,85 +29,83 @@
 	<!--  Green color for CFA -->
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/color.css">
 
-    <script src="https://c328740.ssl.cf1.rackcdn.com/mathjax/2.0-latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script type="text/javascript">
-    MathJax.Hub.Config({
-      tex2jax: {
-        inlineMath: [['$','$'], ['\\(','\\)']],
-        processEscapes: true
-      }
-    });
-    </script>
-
 </head>
 
 <body>
 <header id="header">
 
-	<div class="section-wrapper">
+	<div class="section-wrapper"> <!--  style = "height: 600px; margin-bottom: 10px; background-image: url('{{ ASSET_PATH }}/images/SGP/SGP_Eqn_Opaque.png'); background-position: 50% 50%; background-repeat:no-repeat; background-size: 55%" -->
 		<div class="container">
 			<div class="row">
-				<div class="span6"> 
-					<img class="img" src="{{ ASSET_PATH }}/images/CFA/CFA_LearningTree_Trans2.png" style="width: 500px; padding: 10px; float: right;">
-				</div>
 
-				<div class="span1"> 
-					<div class="separator"></div>
-				</div>
-
-				<div class="span5">
+				<div class="span4">
 					<div class="container">
 			          <div class="row">
 						
 					  	<div class="navbar">
 							<a class="brand" style="text-shadow: 1.5px 1.5px #91b474;">{{site.title}} <br> {{site.tagline}} </a>  
 							<div id="sidebar" class="sidebar-nav span3">
-					  		<div class="navbar-inner">
-								<div class="nav-collapse collapse" id="nav-collapse-01">
-				                    <ul class="nav">
-				                      {% for item in site.navbar %}
-				  					    <li  {% if item.name == page.title %} class="active" {% endif %} >
-				                        <a href="{{item.link}}">
-				                           {{item.name}} 
-				  			 			 {% if item.menu != null %}
-				  						 <b class="caret"></b>
-				  			 			 {% endif %}
-				                        </a>
-				  		 			  {% if item.menu != null %}
-				                          <ul>
-				                          {% for subitem in item.menu %}
-				  						<li><a href="{{subitem.link}}">{{subitem.label}}
-   				  			 			   {% if subitem.submenu != null %}
-   				  						     <b class="caret"></b>
-   				  			 			   {% endif %}
-										 </a>
-				                            {% if subitem.submenu != null %}
-				                              <ul>
-				                                {% for subsubitem in subitem.submenu %}
-				                                  <li><a href="{{subsubitem.link}}">{{subsubitem.label}}</a></li>
-				                                {% endfor %}
-				                              </ul> <!-- /Sub menu -->
-				                            {% endif %}
-				  						  </li>
-				                          {% endfor %}
-				                          </ul>
-				                        {% endif %}
-				                      </li>
-				  					{% endfor %}
-				                    </ul>
-					            </div><!-- nav -->
-					  		</div>
+					  		
+							<div class="navbar-inner">
+								<div class="container">
+									<button class="btn btn-navbar collapsed" data-target=".nav-collapse" data-toggle="collapse" type="button" >
+						                <span class="icon-bar"></span>
+						                <span class="icon-bar"></span>
+						                <span class="icon-bar"></span>
+									</button>
+									<div class="nav-collapse collapse" id="nav-collapse-01" style="height: 0px;" > 
+					                    <ul class="nav">
+					                      {% for item in site.navbar %}
+					  					    <li  {% if item.name == page.title %} class="active" {% endif %} >
+					                        <a href="{{item.link}}">
+					                           {{item.name}} 
+					  			 			 {% if item.menu != null %}
+					  						 <b class="caret"></b>
+					  			 			 {% endif %}
+					                        </a>
+					  		 			  {% if item.menu != null %}
+					                          <ul>
+					                          {% for subitem in item.menu %}
+					  						<li><a href="{{subitem.link}}">{{subitem.label}}
+	   				  			 			   {% if subitem.submenu != null %}
+	   				  						     <b class="caret"></b>
+	   				  			 			   {% endif %}
+											 </a>
+					                            {% if subitem.submenu != null %}
+					                              <ul>
+					                                {% for subsubitem in subitem.submenu %}
+					                                  <li><a href="{{subsubitem.link}}">{{subsubitem.label}}</a></li>
+					                                {% endfor %}
+					                              </ul> <!-- /Sub menu -->
+					                            {% endif %}
+					  						  </li>
+					                          {% endfor %}
+					                          </ul>
+					                        {% endif %}
+					                      </li>
+					  					{% endfor %}
+					                    </ul>
+						            </div><!-- nav -->
+					  			</div>
+							</div>
 					  	</div><!--end: navbar -->
 						</div>
 			          </div>
 			        </div>
 				</div>
+
+				<div class="span6" style = "margin-bottom: 10px; "> 
+	 				<div class="span6" style = "margin-bottom: 10px; background-image: url('{{ ASSET_PATH }}/images/SGP/SGP_Eqn.png'); background-position: 100% 98%; background-repeat:no-repeat; background-size: 65%">
+						 
+	 					<img class="img" src="{{ ASSET_PATH }}/images/CFA/CFA_LearningTree_Trans2.png" style="width: 450px; margin-top: 50px; float: left;">
+	 				</div>
+				
+
+				</div>
 			</div>
 		</div>
 	</div>
-
-
-
+</header>	
 
     <!-- start: footer -->
 	<div class="post-footer">
@@ -130,10 +126,13 @@
 			</div>
 		</div>
 	</div>
-<!-- end: footer -->
+	<!-- end: footer -->
 
 	    {% include JB/comments %}
 	    {% include JB/analytics %}
+		
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
+		<script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
 
     </body>
 </html>
