Update of Washington_SGP_Report_2013

--- a/_includes/themes/CFA/report.html
+++ b/_includes/themes/CFA/report.html
@@ -190,7 +190,7 @@
       </div>
 	  
       <div class="footer" style='text-align:center; margin-left: 330px; width: 920px;'>
-          <i>All contents Copyright 2013. All rights reserved. CSS adapted from Substance.io and Scott.Fortmann-Roe.com and modified.</i>
+          <i>CSS adapted from Substance.io and Scott.Fortmann-Roe.com and modified.</i>
       </div>
       
     <script src="http://code.jquery.com/jquery.js"></script>
