Add table, figure and note counters to SIMPLE format

--- a/_includes/themes/CFA/report_simple.html
+++ b/_includes/themes/CFA/report_simple.html
@@ -46,6 +46,10 @@
   	   });
       </script>
       <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+	
+      <script type="text/javascript">var tableNum = 1;</script>
+      <script type="text/javascript">var figNum = 1;</script>
+      <script type="text/javascript">var noteNum = 1;</script>
 
       <style>
       .rChart {
