Pretty up the CSS

--- a/assets/themes/CFA/bootstrap/css/bootstrap.css
+++ b/assets/themes/CFA/bootstrap/css/bootstrap.css
@@ -810,8 +810,12 @@ ol ul {
   margin-bottom: 10px;
 }
 
+p+ul ol {
+    margin-bottom: 0px;
+}
+
 li {
-  padding: 10px;
+  padding: 5px;
   line-height: 20px;
 }
 
@@ -961,7 +965,7 @@ code {
   color: #d14;
   white-space: nowrap;
   background-color: #f7f7f9;
-  border: 1px solid #e1e1e8;
+  /*border: 1px solid #e1e1e8; removed box 1/22/14 */
 }
 
 pre {
